Konsole: Wrap file name into quotes

Filenames can contain spaces

BUG: 456570